--- a/pom.xml
+++ b/pom.xml
@@ -88,6 +88,13 @@
             <scope>system</scope>
             <systemPath>${project.basedir}/lib/Neo4jService-1.0-SNAPSHOT.jar</systemPath>
         </dependency>
+        <dependency>
+            <groupId>org.batteryparkdev</groupId>
+            <artifactId>PublicationDataImporter</artifactId>
+            <version>1.0-SNAPSHOT</version>
+            <scope>system</scope>
+            <systemPath>${project.basedir}/lib/PublicationDataImporter-1.0-SNAPSHOT.jar</systemPath>
+        </dependency>
         <!-- add local pubmed parser dependency -->
         <dependency>
             <groupId>ai.wisecube</groupId>
